feat(example.md): add slidev-component-spotlight and slidev-addon-qrcode for enhanced presentation features
refactor(example.md): replace inline eBPF code with snippet reference for cleaner markdown

style(global-bottom.vue): simplify footer visibility condition for better readability

feat(global-top.vue): add new component to display logo and spotlight

refactor(layouts/default.vue): move logo to global-top.vue and add script to style h1 elements

feat(package.json): add new dependencies for slidev addons and update slidev configuration

chore(public): add eBPF icon image for QR code and logo display

refactor(styles/layout.css): add transparent class for styling and adjust see element position

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -23,6 +23,10 @@
   }
 }
 
+.transparent {
+  opacity: 0.5;
+}
+
 .slidev-layout.cover img[alt~="logo"] {
   position: absolute;
   bottom: 33px;
@@ -121,9 +125,8 @@ font-vienna {
 
 see {
   position: absolute;
-  bottom: 7.5em;
+  bottom: 6em;
   color: lightgray;    
   height: 20px;
   font-size: 0.54em;
 }
-
