--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,30 +1,62 @@
 :root {
-  /* default theme color */
-  /* can be overrided by uses `themeConfig` option */
-  --slidev-theme-primary: #5d8392;
+  /* Theme colors - can be overridden via themeConfig */
+  --slidev-theme-primary: #00AEEF;
+  --ebpf-vienna-primary: #00AEEF;
+  --ebpf-vienna-bg-light: #FEFEF1;
+  --ebpf-vienna-text-dark: #5F5F5F;
+  --ebpf-vienna-text-light: #9F9F9F;
 }
 
+/* Layout defaults */
+.slidev-layout {
+  color: gray;
+}
+
+/* Cover and Intro layouts */
 .slidev-layout.cover,
 .slidev-layout.intro {
   @apply h-full grid;
-
-  h1 {
-    @apply text-6xl leading-20;
-  }
-
-  h1 + p {
-    @apply -mt-2 opacity-50 mb-4;
-  }
-
-  p + h2,
-  ul + h2,
-  table + h2 {
-    @apply mt-10;
-  }
 }
 
-.transparent {
-  opacity: 0.5;
+.slidev-layout.cover h1,
+.slidev-layout.intro h1 {
+  @apply text-6xl leading-20;
+}
+
+.slidev-layout.cover h1 + p,
+.slidev-layout.intro h1 + p {
+  @apply -mt-2 opacity-50 mb-4;
+}
+
+.slidev-layout.cover p + h2,
+.slidev-layout.cover ul + h2,
+.slidev-layout.cover table + h2,
+.slidev-layout.intro p + h2,
+.slidev-layout.intro ul + h2,
+.slidev-layout.intro table + h2 {
+  @apply mt-10;
+}
+
+/* Cover layout specific */
+.slidev-layout.cover {
+  color: #000000;
+  background-color: var(--ebpf-vienna-bg-light);
+}
+
+.slidev-layout.cover .cover-content {
+  text-align: center;
+}
+
+.slidev-layout.cover h1 {
+  font-weight: bolder;
+  color: var(--ebpf-vienna-text-dark);
+}
+
+.slidev-layout.cover p {
+  font-weight: bold;
+  font-style: italic;
+  font-size: larger;
+  color: var(--ebpf-vienna-text-light);
 }
 
 .slidev-layout.cover img[alt~="logo"] {
@@ -34,34 +66,23 @@
   width: 12%;
 }
 
-.slidev-layout.cover {
-  color: #000000;
-  background-color: #FEFEF1;
+/* Vienna branding text on cover */
+.vienna-text {
+  font-family: 'Big Caslon', serif;
+  font-size: 35px;
+  position: absolute;
+  bottom: 23px;
+  right: 36%;
 }
 
-.slidev-layout.cover h1 {
-  font-weight: bolder;
-  color: #5F5F5F;
-}
-
-.slidev-layout.cover p {
-  font-weight: bold;
-  font-style: italic;
-  font-size: larger;
-  color: #9F9F9F;
-}
-
-h1 {
-  color: #00AEEF;
-}
-
+/* Lead layout */
 .slidev-layout.lead {
   text-align: center;
   padding-top: 25%;
   font-weight: bolder;
   font-size: 200%;
   color: white;
-  background-color: #00AEEF;
+  background-color: var(--ebpf-vienna-primary);
 }
 
 .slidev-layout.lead h1 {
@@ -74,14 +95,17 @@ h1 {
   font-size: 0.75em;
 }
 
-font-vienna {
-  font-family: 'Big Caslon';
-  font-size: 35px;
-  position: absolute;
-  bottom: 23px;
-  right: 36%;
+/* Headers */
+h1 {
+  color: var(--ebpf-vienna-primary);
 }
 
+/* Transparent modifier for split headers */
+.transparent {
+  opacity: 0.5;
+}
+
+/* eBPF logo in top-right */
 .logo {
   position: absolute;
   width: 2.1em;
@@ -89,44 +113,45 @@ font-vienna {
   right: 2.5em;
 }
 
+/* Footer elements */
 .footer {
   position: absolute;
   color: gray;
-  width: 33.3%; 
+  width: 33.3%;
   bottom: 2em;
 }
 
 .footer-left {
-  text-align: left; 
+  text-align: left;
   left: 3.5em;
 }
+
 .footer-center {
   text-align: center;
   left: 22em;
 }
+
 .footer-right {
-  text-align: right;
   display: flex;
-  background: lightgray; 
-  border-radius: 70px;
-  right: 55px;
-  color: white;
-  height: 0.01em;
   align-items: center;
   justify-content: center;
-  padding: 15px;
-  text-shadow: none;
+  text-align: right;
+  right: 55px;
   width: 0.01em;
+  height: 0.01em;
+  padding: 15px;
+  color: white;
+  background: lightgray;
+  border-radius: 70px;
+  text-shadow: none;
 }
 
-.slidev-layout {
-  color: gray
-}
-
-see {
+/* See/reference links */
+.see {
   position: absolute;
   bottom: 6em;
-  color: lightgray;    
+  color: lightgray;
   height: 20px;
   font-size: 0.54em;
+  display: block;
 }
